--- a/index.html
+++ b/index.html
@@ -1,45 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
 
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1, IE=edge">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-	<title>Soccer Heads Unblocked - ubg235 Famobi</title>
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 
-	<meta id="viewport" name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta name="apple-mobile-web-app-capable" content="yes">
+  <title>3D Bowling Unblocked - ubg235 Famobi</title>
+  <meta name="description" content="3D Bowling, 3D Bowling Unblocked, 3D Bowling Crazy Games">
+  <meta property="og:image" content="3d-bowling.png" />
 
-	<style>
-		html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; background-color: #475829}
-		#openfl-content { background: #475829; width: 100%; height: 100%; }
-	</style>
+  <style>
+    html,body { margin: 0; padding: 0; height: 100%; overflow: hidden; }
+    #openfl-content { background: #000000; width: 100%; height: 100%; }
+  </style>
 
-	<script>
-		window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, false);
-		// if (typeof window.devicePixelRatio != 'undefined' && window.devicePixelRatio > 2) {
-		// 	var meta = document.querySelector("meta[name=viewport]");
-		// 	meta.setAttribute ('content', 'width=device-width, initial-scale=' + (2 / window.devicePixelRatio) + ', user-scalable=no');
-		// }
+  <script>
+    window.addEventListener ("touchmove", function (event) { event.preventDefault (); }, false);
+    window.famobi_gameID = "3d-bowling";
+    window.famobi_gameJS = ['js/all.js',
+      function() {
+        // start the game
+        lime.embed ("openfl-content", 0, 0, "E4631D");
+      }
+    ];
+    (function (document, url, fgJS, firstJS) {
+      fgJS = document.createElement('script');
+      firstJS = document.getElementsByTagName('script')[0];
 
-	    // Package-ID
-	    window.famobi_gameID = "soccer-heads";
-	    window.famobi_gameJS = ['js/all.js',
-	        function(){
-	            lime.embed ("openfl-content", 800, 500, "475829");
-	        }
-	    ];
-
-	    (function (document, url, fgJS, firstJS) {
-	            fgJS = document.createElement('script');
-	            firstJS = document.getElementsByTagName('script')[0];
-	            fgJS.src = url + encodeURIComponent(document.location.href);
-	            firstJS.parentNode.insertBefore(fgJS, firstJS);
-	    })(document, 'v1.js?e=');
-	</script>
+      fgJS.src = url + encodeURIComponent(document.location.href);
+      firstJS.parentNode.insertBefore(fgJS, firstJS);
+    })(document, 'js/start.js?e=');
+  </script>
 </head>
 <body>
-	<div id="openfl-content"></div>
+  <div id="openfl-content"></div>
   <script src="js/analytics_ubg_v1_4.js"></script>
+  <script src="js/ubg235_client_v1_1.js"></script>
 </body>
 </html>
